fixed some styling overflow issues

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -213,10 +213,10 @@ img.logo {
 
 
 
-#main-content {
-  height: 100%;
-  color: #02243C;
-}
+//#main-content {
+//  height: 100%;
+//  color: #02243C;
+//}
 
 .button_links a:link {
   color: lightgray;
